# vpo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: art_integration.py  minimal.py
tests/: test_advantage.py  test_metrics.py
vpo/: README.md  __init__.py  advantage.py  config.py  metrics.py  prompt.py
